changed delete/edit icons to gray, fixed alignment in breakdown table, added and updated container borders

--- a/client/stylesheet.css
+++ b/client/stylesheet.css
@@ -106,7 +106,7 @@ input, button {
 	padding-bottom: 15px;
 	border-bottom-style: solid;
 	border-bottom-width: 1px;
-	border-bottom-color: #999999; /*dark gray*/
+	border-bottom-color: #b3b3b3; /*dark gray*/
 	margin-bottom: 30px;
 }
 
@@ -123,7 +123,7 @@ input, button {
 .add_cancel_button_container {
 	border-top-style: solid;
 	border-top-width: 1px;
-	border-top-color: #999999;
+	border-top-color: #b3b3b3;
 	margin-top: 25px;
 	padding-top: 25px;
 }
@@ -160,9 +160,8 @@ input, button {
 	z-index: 3;
 }
 .leftContainer {
-	border-right-style: solid;
-	border-right-width: 1px;
-	border-right-color: #000000;
+	border-right: 2px solid #b3b3b3;
+	padding-right: 60px;
 }
 
 .ingred_header {
@@ -221,12 +220,12 @@ td {
 .emissions {
 	text-align: right;
 	width: 30%;
-	vertical-align: middle;
+	vertical-align: top;
 	padding-right: 7px;
 }
 
 .qty_ingred_breakdown {
-	vertical-align: middle;
+	vertical-align: top;
 	font-style: italic;
 }
 
@@ -234,10 +233,11 @@ td {
 	width: 12%;
 	text-align: right;
 	padding-right: 3px;
+	vertical-align: top;
 }
 
 td > span {
-	vertical-align: middle;
+	vertical-align: top;
 }
 
 table {
@@ -256,7 +256,7 @@ table {
 	font-size: 14px;
 	font-weight: bold;
 	float: right;
-	border: 1px solid #999999;
+	border: 1px solid #b3b3b3;
 	background: #ccf5ff;
 	/*color: #a6a6a6;*/
 	margin-left: 8px;
@@ -264,7 +264,7 @@ table {
 
 .cancel_button {
 	background: none;
-	color: #999999;
+	color: #b3b3b3;
   /*color: #a6a6a6;*/
   font-weight: 100;
 }
@@ -322,7 +322,7 @@ table {
 	width: 40px;
 	position: relative;
 	float: left;
-	margin-right: 10px;
+	margin-left: 5px;
 }
 
 .table_qty input{
@@ -331,4 +331,13 @@ table {
   color: black;
   border: 1px solid #bfbfbf;
   height: 20px;
+}
+
+.subtotal_container, .total_container {
+	border-bottom: 1px solid #b3b3b3;
+	padding-bottom: 10px;
+}
+
+.offset_container {
+	padding-top: 10px;
 }
